--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -20,3 +20,49 @@ h2 {
     margin: auto;
     width: 100%;
 }
+
+
+  .cardHeader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgb(246, 247, 251);
+    box-shadow: 0px 0px 1px 0px rgb(122, 118, 122);
+    z-index: 100;
+    font-size: 16px;
+    color: rgb(91, 89, 89);
+  }
+  .cardHeader .logo {
+    height: 50px;
+    cursor: pointer;
+  }
+  
+  .cardHeader nav ul {
+    width: 60%;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+  }
+  
+  .cardHeader nav ul li a {
+    text-decoration: none;
+    color: rgb(91, 89, 89);
+  }
+  
+  .cardHeader nav ul li a:hover {
+    color: rgb(236, 59, 59);
+  }
+  
+  .languagesSelect {
+    border: none;
+    background-color: rgb(246, 247, 251);
+    color: rgb(91, 89, 89);
+    font-size: 16px;
+  }
+  
+  .languagesSelect:hover {
+    color: rgb(236, 59, 59);
+  }
