--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,13 +1,20 @@
 .App {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  justify-content: center;
 }
 
 .Body {
   display: flex;
   justify-content: center;
+  width: 60%;
 }
+
+.cardHeader {
+  width: 60%;
+}
+
+
 
 
 
