--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -1,10 +1,6 @@
 .Header {
     margin: auto;
-    margin: auto;
-  
 }
-
-
 
 h2 {
     text-align: center;
@@ -18,16 +14,14 @@ h2 {
 
 .img_logo {
     margin: auto;
-    width: 100%;
 }
-
-
   .cardHeader {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgb(246, 247, 251);
+    margin: auto;
+    background-color: rgb(211, 250, 237);
     box-shadow: 0px 0px 1px 0px rgb(122, 118, 122);
     z-index: 100;
     font-size: 16px;
@@ -36,6 +30,7 @@ h2 {
   .cardHeader .logo {
     height: 50px;
     cursor: pointer;
+    background-color: rgb(211, 250, 237);;
   }
   
   .cardHeader nav ul {
@@ -45,6 +40,7 @@ h2 {
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    margin: auto;
   }
   
   .cardHeader nav ul li a {
