--- a/my-app/src/components/Slider/Slider.css
+++ b/my-app/src/components/Slider/Slider.css
@@ -1,9 +1,8 @@
 
   .card_container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+
   }
   
   .card_words {
@@ -48,8 +47,16 @@
   
   .nextBtn {
     border: none;
-    background-color: white;
     margin: 10px;
     cursor: pointer;
+    
   }
 
+button {
+  background-color: white;
+  border: none;
+}
+
+.align_button {
+  margin: auto;
+}
