--- a/my-app/src/components/Footer/Footer.css
+++ b/my-app/src/components/Footer/Footer.css
@@ -1,18 +1,66 @@
-  .footer {
-    position: fixed;
-    bottom: 0;
-    width: 100vw;
-    background-color: rgb(211, 250, 237);
-    z-index: 100;
-    font-size: 16px;
-    color: rgb(91, 89, 89);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  
-  .logo {
-    height: 50px;
-    cursor: pointer;
-    background-color: rgb(211, 250, 237);;
-  }
+h4 {
+  text-align: center;
+  font-size: calc((100vw + 2748px) / 261);
+  border: none;
+}
+
+h3 {
+  font-size: calc((100vw + 7680px) / 570);
+}
+
+span {
+  font-family: "Annabelle", sans-serif;
+}
+
+.footer {
+  bottom: 0;
+  width: 100vw;
+  background: linear-gradient(60deg, rgb(180, 131, 120), rgb(253, 217, 208));
+  z-index: 100;
+  font-size: 16px;
+  color: rgb(91, 89, 89);
+}
+.footer__item {
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap-reverse;
+  justify-content: space-evenly;
+  margin: auto;
+}
+.footer__adress {
+  margin: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.footer__map {
+  margin: 20px 0;
+}
+.footer__contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 0;
+  padding: 0 1em;
+  width: 40%;
+}
+.footer__contacts_vk {
+  margin-left: -3px;
+}
+.footer p {
+  margin: 0;
+  font-size: calc((100vw + 1600px) / 190);
+}
+
+img {
+  height: 30px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 0.2fr 2fr;
+  grid-template-rows: 50px;
+  align-items: center;
+  row-gap: 5px;
+}/*# sourceMappingURL=Footer.css.map */
